--- a/web/package.json
+++ b/web/package.json
@@ -22,8 +22,9 @@
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "typescript": "^4.1.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "prettier": "2.5.1",
+    "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
