--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,12 @@
     "@remix-run/netlify": "^1.1.3",
     "@remix-run/react": "^1.1.3",
     "@sanity/client": "^3.1.0",
+    "@sanity/image-url": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.3"
+    "react-schemaorg": "^2.0.0",
+    "remix": "^1.1.3",
+    "schema-dts": "^1.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
