--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^1.1.3",
     "@sanity/client": "^3.1.0",
     "@sanity/image-url": "^1.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-schemaorg": "^2.0.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3",
+    "@types/lodash": "^4.14.179",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
