--- a/web/.prettierignore
+++ b/web/.prettierignore
@@ -1,6 +1,7 @@
-node_modules
 /.cache
-/netlify/functions/server/build
-/public/build
-/.netlify
-/content
+/.github
+/.husky
+/build
+/public
+/node_modules
+/dist
