--- a/web/package.json
+++ b/web/package.json
@@ -1,38 +1,63 @@
 {
+  "name": "remix-worker-template",
   "private": true,
-  "name": "web",
-  "description": "",
-  "license": "",
+  "description": "All-in-one remix starter template for Cloudflare Workers",
+  "sideEffects": false,
+  "main": "./dist/worker.mjs",
   "scripts": {
-    "build": "remix build",
-    "dev": "cross-env NODE_ENV=development netlify dev",
-    "postinstall": "remix setup node"
+    "prebuild": "npm run cleanup",
+    "build": " npm run build:remix && npm run build:worker",
+    "build:remix": "remix build",
+    "build:worker": "cross-env NODE_ENV=production VERSION=0.0.1 node ./scripts/build.mjs",
+    "cleanup": "rimraf .cache ./dist ./build ./public/build",
+    "dev": "concurrently \"npm:dev:*\"",
+    "dev:miniflare": "miniflare --build-command \"node ./scripts/build.mjs\" --build-watch-path ./worker --build-watch-path ./build/index.js --no-cache --watch --open",
+    "dev:remix": "remix watch",
+    "postinstall": "remix setup cloudflare-pages",
+    "start": "miniflare",
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" playwright test"
+  },
+  "lint-staged": {
+    "*.{js,mjs,ts,tsx,css,md,yml}": "prettier --write"
   },
   "dependencies": {
-    "@netlify/functions": "^0.10.0",
-    "@portabletext/react": "^1.0.3",
-    "@remix-run/netlify": "^1.1.3",
-    "@remix-run/react": "^1.1.3",
-    "@sanity/client": "^3.1.0",
+    "@cloudflare/kv-asset-handler": "^0.2.0",
+    "@portabletext/react": "^1.0.4",
+    "@remix-run/cloudflare-pages": "^1.3.2",
+    "@remix-run/react": "^1.3.2",
+    "@remix-run/server-runtime": "^1.3.4",
+    "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-schemaorg": "^2.0.0",
-    "remix": "^1.1.3",
-    "schema-dts": "^1.1.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "remix": "^1.3.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3",
-    "@types/lodash": "^4.14.179",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
+    "@cloudflare/workers-types": "^3.4.0",
+    "@cloudflare/wrangler": "^1.19.9",
+    "@playwright-testing-library/test": "^4.2.0",
+    "@playwright/test": "^1.20.0",
+    "@remix-run/dev": "^1.3.2",
+    "@remix-run/eslint-config": "^1.3.2",
+    "@types/lodash": "^4.14.181",
+    "@types/react": "^17.0.41",
+    "@types/react-dom": "^17.0.14",
+    "autoprefixer": "^10.4.4",
+    "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
-    "prettier": "2.5.1",
-    "typescript": "^4.1.2"
+    "esbuild": "^0.14.27",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
+    "miniflare": "^2.3.0",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.6.2"
   },
   "engines": {
-    "node": ">=14"
-  },
-  "sideEffects": false
+    "node": ">=16.7"
+  }
 }
