--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ES2019"],
-    "isolatedModules": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "target": "ES2019",
+    "jsx": "react-jsx",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "target": "ESNext",
     "strict": true,
-    "baseUrl": "./",
+    "types": ["@cloudflare/workers-types"],
     "paths": {
       "~/*": ["./app/*"]
     },
