--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remix": "^1.3.2"
   },
   "devDependencies": {
