--- a/web/package.json
+++ b/web/package.json
@@ -1,64 +1,42 @@
 {
-  "name": "remix-worker-template",
   "private": true,
-  "description": "All-in-one remix starter template for Cloudflare Workers",
   "sideEffects": false,
-  "main": "./dist/worker.mjs",
   "scripts": {
-    "prebuild": "npm run cleanup",
-    "build": " npm run build:remix && npm run build:worker",
-    "build:remix": "remix build",
-    "build:worker": "cross-env NODE_ENV=production VERSION=0.0.1 node ./scripts/build.mjs",
-    "cleanup": "rimraf .cache ./dist ./build ./public/build",
-    "dev": "concurrently \"npm:dev:*\"",
-    "dev:miniflare": "miniflare --build-command \"node ./scripts/build.mjs\" --build-watch-path ./worker --build-watch-path ./build/index.js --no-cache --watch --open",
+    "build": "remix build",
+    "deploy": "wrangler publish",
     "dev:remix": "remix watch",
-    "postinstall": "remix setup cloudflare-pages",
-    "start": "miniflare",
-    "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" playwright test"
-  },
-  "lint-staged": {
-    "*.{js,mjs,ts,tsx,css,md,yml}": "prettier --write"
+    "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch",
+    "dev": "remix build && run-p \"dev:*\"",
+    "start": "cross-env NODE_ENV=production miniflare ./build/index.js"
   },
   "dependencies": {
-    "@cloudflare/kv-asset-handler": "^0.2.0",
     "@portabletext/react": "^1.0.4",
-    "@remix-run/cloudflare-pages": "^1.3.2",
-    "@remix-run/react": "^1.3.2",
-    "@remix-run/server-runtime": "^1.3.4",
+    "@remix-run/cloudflare": "^1.6.5",
+    "@remix-run/cloudflare-workers": "^1.6.5",
+    "@remix-run/react": "^1.6.5",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
+    "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "remix": "^1.3.2"
+    "picosanity": "^4.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.4.0",
-    "@cloudflare/wrangler": "^1.19.9",
-    "@playwright-testing-library/test": "^4.2.0",
-    "@playwright/test": "^1.20.0",
-    "@remix-run/dev": "^1.3.2",
-    "@remix-run/eslint-config": "^1.3.2",
-    "@types/lodash": "^4.14.181",
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "^17.0.14",
-    "autoprefixer": "^10.4.4",
-    "concurrently": "^7.0.0",
-    "cross-env": "^7.0.3",
-    "esbuild": "^0.14.27",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
-    "miniflare": "^2.3.0",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.6.2"
+    "@cloudflare/workers-types": "^3.10.0",
+    "@remix-run/dev": "^1.6.5",
+    "@remix-run/eslint-config": "^1.6.5",
+    "@types/lodash": "^4.14.182",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
+    "@types/react-syntax-highlighter": "^15.5.3",
+    "eslint": "^8.15.0",
+    "miniflare": "^2.4.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.7.4"
   },
   "engines": {
-    "node": ">=16.7"
+    "node": ">=14"
   }
 }
