--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["DOM", "DOM.Iterable", "ES2019"],
+    "isolatedModules": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
     "jsx": "react-jsx",
-    "module": "CommonJS",
     "moduleResolution": "node",
-    "target": "ESNext",
+    "resolveJsonModule": true,
+    "target": "ES2019",
     "strict": true,
-    "types": ["@cloudflare/workers-types"],
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
     },
