--- a/web/wrangler.toml
+++ b/web/wrangler.toml
@@ -1,20 +1,13 @@
 name = "ryan-killeen-com"
-type = "javascript"
+
+account_id = ""
 workers_dev = true
-compatibility_date = "2022-04-01"
-# account_id = "Or specified with process.env.CF_ACCOUNT_ID"
-# zone_id = "Or specified with process.env.CF_ZONE_ID"
-# route = "example.com/*"
+main = "./build/index.js"
+# https://developers.cloudflare.com/workers/platform/compatibility-dates
+compatibility_date = "2022-04-05"
 
 [site]
-bucket = "./public"
-entry-point = "."
+  bucket = "./public"
 
 [build]
-command = "npm run build"
-watch_dir = "./build/index.js"
-
-[build.upload]
-format = "modules"
-dir = "./dist"
-main = "./worker.mjs"
+  command = "npm run build"
