--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "picosanity": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-refractor": "^2.1.7",
+    "refractor": "^4.7.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.10.0",
