--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-refractor": "^2.1.7",
-    "refractor": "^4.7.0"
+    "refractor": "^4.7.0",
+    "remix-utils": "^3.3.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.10.0",
