--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -5,6 +5,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: web
     steps:
       - name: Set up Node
         uses: actions/setup-node@v1
