--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,13 @@
-name: Development Workflow
+name: Deployment Workflow
 on:
-  pull_request:
-    branches: ["main"]
+  push:
+    branches:
+      - "main"
 jobs:
-  build:
-    name: Build
+  deploy:
+    name: Deploying
+    # needs: [test, lint]
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -26,5 +29,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm ci
-      - name: Build the worker
-        run: npm run build
+      - name: Publish
+        run: npx wrangler publish
+        env:
+          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
