--- a/web/package.json
+++ b/web/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "web",
   "private": true,
   "sideEffects": false,
   "scripts": {
@@ -16,6 +17,7 @@
     "@remix-run/react": "^1.6.5",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
+    "@stitches/react": "^1.2.8",
     "cross-env": "^7.0.3",
     "feed": "^4.2.2",
     "lodash": "^4.17.21",
