--- a/cms/package.json
+++ b/cms/package.json
@@ -8,25 +8,20 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "npx @sanity/cli start",
-    "build": "npx @sanity/cli build"
+    "build": "npx @sanity/cli build",
+    "dev": "npx @sanity/cli dev"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.29.5",
-    "@sanity/code-input": "^2.29.5",
-    "@sanity/core": "^2.29.5",
-    "@sanity/default-layout": "^2.29.5",
-    "@sanity/default-login": "^2.29.5",
-    "@sanity/desk-tool": "^2.29.5",
-    "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.29.5",
+    "@sanity/code-input": "^3.0.0",
+    "@sanity/vision": "^3.2.6",
     "eslint": "^8.6.0",
-    "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sanity": "^3.2.6",
     "styled-components": "^5.2.0"
-  },
-  "devDependencies": {}
+  }
 }
