--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,12 +3,37 @@ on:
   pull_request:
     branches: ["main"]
 jobs:
-  build:
-    name: Build
+  build-web:
+    name: Build Web
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: web
+    steps:
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16.x
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-npm-
+            ${{ runner.OS }}-
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm ci
+      - name: Build the worker
+        run: npm run build
+  build-cms:
+    name: Build Sanity CMS
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: cms
     steps:
       - name: Set up Node
         uses: actions/setup-node@v1
