--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@11ty/eleventy-plugin-rss": "^2.0.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "cross-env": "^7.0.3",
+    "eleventy-plugin-og-image": "^4.2.1",
     "luxon": "^3.5.0",
     "prismjs": "^1.29.0",
     "zod": "^3.23.8",
