--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "zod-validation-error": "^3.3.1"
   },
   "dependencies": {
-    "@zachleat/heading-anchors": "^1.0.1"
+    "@zachleat/heading-anchors": "^1.0.1",
+    "markdown-it-github-alerts": "^1.0.1"
   }
 }
